--- a/gathungu_test.ipynb
+++ b/gathungu_test.ipynb
@@ -12,9 +12,10 @@
    "metadata": {},
    "source": [
     "Revison on intro\n",
-    " data\n",
-    " functions \n",
-    " control\n"
+    " * data\n",
+    " * functions \n",
+    " * control\n",
+    " \n"
    ]
   },
   {
