slicing and for loops done

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -142,6 +142,249 @@
     "print(infor.keys())\n",
     "print(infor.values())\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <font color = \"red\"> Extracting data from the data structures</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yvonne amunga\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"yvonne amunga\" # extract data from strings,numbers etc by printing or calling\n",
+    "print(name)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'yvonne amunga'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'peter'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lists\n",
+    "friends = ['john','jim',\"james\",\"karoki\",\"jane\",\"peter\"]\n",
+    "# indexing\n",
+    "len(friends)\n",
+    "friends[3]\n",
+    "# Negative index\n",
+    "friends[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['jane', 'peter']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# slicing\n",
+    "friends[4:7]\n",
+    "friends[4:]\n",
+    "# assignment -   cretae several lists sand try indexing and slicing as much as syopu can "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23, 10, 21, 67]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add lists \n",
+    "[23,10] + [21 ,67]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['john', 'jim', 'james', 'karoki', 'jane', 'peter', 'grace']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# append or add to lists\n",
+    "friends.append('grace')\n",
+    "print(friends)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'english': 98, 'maths': 12, 'science': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dictionaries\n",
+    "marks = {'english':98,'maths':12,'science':100}\n",
+    "print(marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# use the key to get tha value\n",
+    "marks['maths']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'english': 98, 'maths': 12, 'science': 100, 'Bio': 78}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add more information to a dictionary\n",
+    "marks['Bio'] = 78\n",
+    "print(marks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dictionaries and lists\n",
+    "# index and slice\n",
+    "# append\n",
+    "# add and get data from dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "john\n",
+      "jim\n",
+      "james\n",
+      "karoki\n",
+      "jane\n",
+      "peter\n",
+      "grace\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop (control flows)\n",
+    "for friend in friends:\n",
+    "    print(friend)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a list of your friends ages\n",
+    "# for each friend print their age in 10 years\n",
+    "# save it in anaother list\n",
+    "#print the final list and slice the last 2"
+   ]
   }
  ],
  "metadata": {
@@ -160,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
