functions and for loops

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -385,6 +385,272 @@
     "# save it in anaother list\n",
     "#print the final list and slice the last 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[33, 20, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ages = [23,10,54]\n",
+    "names = ['john','jim','kamau']\n",
+    "\n",
+    "empty = []\n",
+    "for age in ages:\n",
+    "    new_age = age+10\n",
+    "    empty.append(new_age)\n",
+    "print(empty)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "john : 33\n",
+      "jim : 20\n",
+      "kamau : 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using a zip function\n",
+    "for name,age in zip(names,ages):\n",
+    "    print(name,\":\",age+10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n",
+      "alice\n",
+      "edward\n"
+     ]
+    }
+   ],
+   "source": [
+    "friends = {'John':10,'alice':34,'edward':40}\n",
+    "\n",
+    "for name in friends.keys():\n",
+    "    print(name)\n",
+    "    friends[name]+=10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'John': 20, 'alice': 44, 'edward': 50}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "friends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions\n",
+    "\n",
+    "$summer = x + y$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20100"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def summer(x,y):\n",
+    "    return x+y\n",
+    "\n",
+    "summer(20,40)\n",
+    "summer(100,20000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello John Kamau'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def greeter(name):\n",
+    "    return f'Hello {name}'\n",
+    "greeter('Karoki Gathungu')\n",
+    "greeter('John Kamau')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Gathungu and  Kamau'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def greeter1(name1,name2):\n",
+    "    return f'Hello {name1} and  {name2}'\n",
+    "\n",
+    "greeter1('Gathungu','Kamau')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Item    Number   Price\n",
+      "------------------------------------------------------------\n",
+      "unga   4   400\n",
+      "bread   2   280\n",
+      "oil   5   1250\n",
+      "rice   10   2000\n",
+      "------------------------------------------------------------\n",
+      "Total -------------------> 3930\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "prices = {'unga':100,'rice':200,'oil':250,'bread':140}\n",
+    "\n",
+    "shopping_list = {'unga':4,'bread':2,'oil':5,'rice':10}\n",
+    "\n",
+    "def supermarket(shopping_list):\n",
+    "    # we need to get the prices\n",
+    "    print('Item','  ','Number ',' Price')\n",
+    "    print('--'*30)\n",
+    "    total =0\n",
+    "    for item,number in zip(shopping_list.keys(),shopping_list.values()):\n",
+    "        price = prices[item]\n",
+    "        total_price = price * number\n",
+    "        total +=total_price\n",
+    "        print(item,' ',number,' ',total_price)\n",
+    "    print('--'*30)\n",
+    "    print('Total ------------------->',total)\n",
+    "   \n",
+    "\n",
+    "supermarket(shopping_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "authors = {\n",
+    "    'shakespeare':{\n",
+    "        'french':['Casanova','Lovecherie'],\n",
+    "        'English':['romeo and juliet','merchant of venice','Julius caesar','to whom the bell tolls']\n",
+    "    },\n",
+    "    'Ngugi wa thiongo':{\n",
+    "        'Kikuyu':{'Murogi wa kagogo','saitani mutharabaini'},\n",
+    "        'English':{'the river between','a grain of wheat','weep not child'}\n",
+    "    },\n",
+    "    'John Kiriamiti':{\n",
+    "        'english':['my life in crime','my life with a criminal','my life in prison','son of fate']\n",
+    "    }\n",
+    "}\n",
+    "# json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for each author list the number of their books eg shakespare (englis:3, french,2)\n",
+    "# total number of authors\n",
+    "# total number of english books,Kikuyu books, french books\n",
+    "# print the last 2 books of john kiriamiti"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a list of 5000 prices ( you can use the random function)\n",
+    "\n",
+    "# create a function that generates the mean of these numbers\n",
+    "# create anothe function that generates the minimum and the maximu of the numbers\n",
+    "#  a function that genertates the sum of the numbers\n",
+    "# a function that returns the square of the list of numbers"
+   ]
   }
  ],
  "metadata": {
