--- a/gathungu_test.ipynb
+++ b/gathungu_test.ipynb
@@ -400,6 +400,52 @@
     "for friend in friends:\n",
     "    print(friend) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friends = [\"james:50\",\"kamau:30\",\"grace:20\",\"ann:23\",\"njogu:65\",\"njenga:90\",\"kiuna:80\",\"mwangi:50\",\"lucy:45\",\"mwai:19\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# age in 10 years\n",
+    "# current age + age_in_10_years\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "james:50\n",
+      "kamau:30\n",
+      "grace:20\n",
+      "ann:23\n",
+      "njogu:65\n",
+      "njenga:90\n",
+      "kiuna:80\n",
+      "mwangi:50\n",
+      "lucy:45\n",
+      "mwai:19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for friend in friends:\n",
+    "    print(friend)"
+   ]
   }
  ],
  "metadata": {
