added more work

--- a/gathungu_test.ipynb
+++ b/gathungu_test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "'mwai'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "['james', 'grace', 'njogu', 'kiuna', 'lucy']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "['kamau', 'ann', 'njenga', 'mwangi', 'mwai']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "['james', 'ann', 'kiuna', 'mwai']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -293,14 +293,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['james', 'kamau', 'grace', 'ann', 'njogu', 'njenga', 'kiuna', 'mwangi', 'lucy', 'mwai', 'val', 'val', 'val', 'val']\n"
+      "['james', 'kamau', 'grace', 'ann', 'njogu', 'njenga', 'kiuna', 'mwangi', 'lucy', 'mwai', 'val']\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
        "100"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,9 +388,6 @@
       "mwangi\n",
       "lucy\n",
       "mwai\n",
-      "val\n",
-      "val\n",
-      "val\n",
       "val\n"
      ]
     }
@@ -403,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -445,6 +442,155 @@
    "source": [
     "for friend in friends:\n",
     "    print(friend)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['james:50', 'kamau:30', 'grace:20', 'ann:23', 'njogu:65', 'njenga:90', 'kiuna:80', 'mwangi:50', 'lucy:45', 'mwai:19']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(friends)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['james:50',\n",
+       " 'kamau:30',\n",
+       " 'grace:20',\n",
+       " 'ann:23',\n",
+       " 'njogu:65',\n",
+       " 'njenga:90',\n",
+       " 'kiuna:80',\n",
+       " 'mwangi:50']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "friends[:-2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hallo Jack\n",
+      "How do you do\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name):\n",
+    "    print(\"Hallo\", name)\n",
+    "    print(\"How do you do\")\n",
+    "\n",
+    "greet(\"Jack\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is 12.100000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_numbers(n1, n2):\n",
+    "    result = n1 + n2\n",
+    "    print(\"The sum is\", result)\n",
+    "\n",
+    "number1 = 5.4\n",
+    "number2 = 6.7\n",
+    "add_numbers(number1, number2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum is 12.100000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_numbers(n1,n2):\n",
+    "    result = n1+n2\n",
+    "    return result\n",
+    "number1 = 5.4\n",
+    "number2 = 6.7\n",
+    "result = add_numbers(number1, number2)\n",
+    "print(\"The sum is\", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length is: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks = [55,64,75,80,34]\n",
+    "length=len(marks)\n",
+    "print(\"Length is:\",length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total marks you got is: 308\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks_sum=sum(marks)\n",
+    "print(\"The total marks you got is:\",marks_sum)"
    ]
   }
  ],
