--- a/gathungunov.ipynb
+++ b/gathungunov.ipynb
@@ -1768,7 +1768,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1898,7 +1908,7 @@
        "9    Cate      98       5     Lamu   Masters"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,6 +1924,244 @@
     "}\n",
     "Friends = pd.DataFrame(data)\n",
     "Friends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Names</th>\n",
+       "      <th>Weigth</th>\n",
+       "      <th>Heigth</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Education</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mwangi</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Nairobi</td>\n",
+       "      <td>Diploma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ali</td>\n",
+       "      <td>85</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Kiambu</td>\n",
+       "      <td>Degree</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>James</td>\n",
+       "      <td>59</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Kisumu</td>\n",
+       "      <td>Masters</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Linda</td>\n",
+       "      <td>63</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Nyeri</td>\n",
+       "      <td>Degree</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>95</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Kiambu</td>\n",
+       "      <td>Degree</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Wangui</td>\n",
+       "      <td>84</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Kiambu</td>\n",
+       "      <td>PHD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Kamau</td>\n",
+       "      <td>51</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Nairobi</td>\n",
+       "      <td>Diploma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Torres</td>\n",
+       "      <td>81</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Thika</td>\n",
+       "      <td>Diploma</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Tony</td>\n",
+       "      <td>64</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Voi</td>\n",
+       "      <td>Degree</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Cate</td>\n",
+       "      <td>98</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lamu</td>\n",
+       "      <td>Masters</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Names  Weigth  Heigth Location Education\n",
+       "1   Mwangi      50       5  Nairobi   Diploma\n",
+       "2      Ali      85       6   Kiambu    Degree\n",
+       "3    James      59       5   Kisumu   Masters\n",
+       "4    Linda      63       6    Nyeri    Degree\n",
+       "5     Jane      95       5   Kiambu    Degree\n",
+       "6   Wangui      84       6   Kiambu       PHD\n",
+       "7    Kamau      51       6  Nairobi   Diploma\n",
+       "8   Torres      81       5    Thika   Diploma\n",
+       "9     Tony      64       6      Voi    Degree\n",
+       "10    Cate      98       5     Lamu   Masters"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Friends = pd.DataFrame(data,index=[1,2,3,4,5,6,7,8,9,10])\n",
+    "Friends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Weigth</th>\n",
+       "      <th>Heigth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>5.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>17.726314</td>\n",
+       "      <td>0.527046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>72.500000</td>\n",
+       "      <td>5.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>84.750000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>98.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Weigth     Heigth\n",
+       "count  10.000000  10.000000\n",
+       "mean   73.000000   5.500000\n",
+       "std    17.726314   0.527046\n",
+       "min    50.000000   5.000000\n",
+       "25%    60.000000   5.000000\n",
+       "50%    72.500000   5.500000\n",
+       "75%    84.750000   6.000000\n",
+       "max    98.000000   6.000000"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Friends.describe()"
    ]
   }
  ],
